# Linsytion

./: CMakeCache.txt  CMakeLists.txt  Linsytion.f90  Makefile  README.md  cmake_install.cmake  lynsition.mod  mainProgram.f90  sal.out
Examples/: Example1.f90  Example2.f90
run/: Example1.out  Example2.out
src/: Linsytion.f90
