cmake_minimum_required(VERSION 2.8)
project(HelloWorld Fortran)
find_package(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS}")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_executable(prueba.out prueba.f90)
target_link_libraries(prueba.out ${OpenMP_LIBS})
